# steg-png

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: builtin.h  crc.h  md5.h  parse-options.h  png-chunk-processor.h  str-array.h  strbuf.h  usage.h  utils.h
src/: crc.c  main.c  md5.c  parse-options.c  png-chunk-processor.c  str-array.c  strbuf.c  usage.c  utils.c
src/builtin/: embed-lsb.c  embed-zlib.c  embed.c  extract.c  inspect-interactive.c  inspect.c
test/: CMakeLists.txt  t001-basic.sh  t002-embed.sh  t003-extract.sh  t004-inspect.sh
