SET(PROJECT_NAME steg-png)
PROJECT(${PROJECT_NAME} C)

CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)
SET(CMAKE_C_STANDARD 11)

IF(CMAKE_COMPILER_IS_GNUCC)
	ADD_DEFINITIONS(-Wall -Werror -pedantic -std=c11)
ENDIF(CMAKE_COMPILER_IS_GNUCC)

FILE(GLOB_RECURSE SRC_LIST FOLLOW_SYMLINKS src/*.c)
FILE(GLOB_RECURSE HEAD_FILES FOLLOW_SYMLINKS include/*.h ${PROJECT_BINARY_DIR}/include/*.h)

#
# Set Include Directories
#
INCLUDE_DIRECTORIES(
		"${PROJECT_SOURCE_DIR}/include/"
		"${PROJECT_BINARY_DIR}/include/"
)

#
# Configure git-chat Executable and Installation
#
ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main.c ${SRC_LIST})